welcome.lessons.welcome.array.array123.Array123.scala.error
array123:2: error: not found: value t
  t=false
  ^array123:5: error: not found: value t
      t=true
      ^array123:8: error: not found: value t
  return t
         ^