welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
  t=false
  for (i<- 0 to nums.length -1) {
    if (nums(i)==1 && nums(i)==2 && nums(i)==3) {
      t=true
    }
  }
  return t
}